= GDAL/OGR 3.0.2 Release Notes =

The 3.0.2 release is a bug fix release.

== Misc ==

 * Replace a few catch of bad_alloc by exception to handle the case of 32 bit trying to allocate more than 4GB of memory and thus throwing a length_error exception. Found by OSS Fuzz
 * Fix issues with thread_local and C++ objects that don't work well with DLL on Windows
 * Fix build against Poppler 0.82

== Port ==

 * /vsicrypt/: fix memleak in error code path
 * /vsitar/: accept space as end of field terminator

== GDAL core ==

 * fix non-neareset resampling over nodata blocks (#1941)

== GDAL utilities ==

 * gdalwarp: adjust nodata values, passed with -srcnodata/-dstnodata, and close to FLT_MAX to exactly it (#1724)
 * Python scripts: GetOutputDriverFor(): fixes error when multiple drivers found ( #1719)

== GDAL drivers ==

BAG driver:
 * calculate the northeast pixel corner rather than scaling the resolution, due to an incorrectly shifted northeast corner in some CARIS surveys (#1728)

CTable2Dataset driver:
 * SetGeoTransform(): fix read buffer overflow from stack

DAAS driver:
 * accept 4-band RGBA PNG response even when a single band is requested

ENVI driver:
 * preserve 'byte order' on update (#1796)

FITS driver:
 * fix memory leaks

GTiff driver:
 * fix memory leak with -co APPEND_SUBDATASET=YES
 * ensure GDAL PROJ context is used for all libgeotiff functions (requires internal libgeotiff / libgeotiff 1.6)
 * make sure that GetMetadataDomainList() doesn't return EXIF when there's no EXIF metadata (https://github.com/mapbox/rasterio/pull/1740#issuecomment-526660946)
 * GTIFGetOGISDefn: avoid querying UOM length info when it is KvUserDefined to avoid an error to be emitted
 * Internal libtiff: backport security related fixes

HDF5 and netCDF drivers:
 * fix crash when reading attributes of type string of variable length with NULL values

IGNFHeightASCIIGrid driver:
 * fix to read RASPM2018.mnt grid

JP2KAK driver:
 * fix issue with multi-threaded reads
